WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16332
ObjC DOM exception object descriptions should include the exception name
https://bugs.webkit.org/show_bug.cgi?id=16332
Summary
ObjC DOM exception object descriptions should include the exception name
Darin Adler
Reported
2007-12-06 13:06:20 PST
Currently, the description in a DOM exception object includes only the number of the exception. We should include the name as well.
Attachments
patch
(44.40 KB, patch)
2007-12-06 15:39 PST
,
Darin Adler
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2007-12-06 15:39:04 PST
Created
attachment 17762
[details]
patch
Sam Weinig
Comment 2
2007-12-06 16:53:56 PST
Comment on
attachment 17762
[details]
patch Looks good to me!
Darin Adler
Comment 3
2007-12-06 19:19:05 PST
Committed revision 28509.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug