WebCore/svg/SVGException.h
@@ -21,7 +21,10 @@
 
 #ifndef SVGException_h
 #define SVGException_h
+
 #if ENABLE(SVG)
+
+#include <wtf/RefCounted.h>
 
 namespace WebCore {
 
@@ -34,17 +37,15 @@ namespace WebCore {
         SVG_MATRIX_NOT_INVERTABLE   = SVGExceptionOffset + 2
     };
 
-    // This class is NEVER used inside ksvg2. It only inherits from Shared for IDL generation.
     class SVGException : public RefCounted<SVGException> {
     public:
-        // Forward declare these enums in the w3c naming scheme, for IDL generation
-        // We do NOT match the W3C here - we can't return 0/1/2 as JS values - we have to match ours!
         enum {
-            SVG_WRONG_TYPE_ERR          = WebCore::SVG_WRONG_TYPE_ERR - SVGExceptionOffset,
-            SVG_INVALID_VALUE_ERR       = WebCore::SVG_INVALID_VALUE_ERR - SVGExceptionOffset,
-            SVG_MATRIX_NOT_INVERTABLE   = WebCore::SVG_MATRIX_NOT_INVERTABLE - SVGExceptionOffset
+            SVG_WRONG_TYPE_ERR          = 0,
+            SVG_INVALID_VALUE_ERR       = 1,
+            SVG_MATRIX_NOT_INVERTABLE   = 2
         };
     };
+
 } // namespace WebCore
 
 #endif // ENABLE(SVG)
